<resources>
    <string name="scan">掃瞄</string>
    <string name="app_name">超市格價王</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="category">分類</string>
    <string name="recommend">推薦</string>
    <string name="member">我的</string>
    <string name="search">搜尋</string>
    <string name="barcode">掃描</string>
    <string name="login">登入</string>
    <string name="register">註冊</string>
    <string name="setting">設定</string>
    <string name="about">關於</string>
    <string name="Goods">貨品</string>
    <string name="Location">店鋪</string>
    <string name="Email">電郵地址</string>
    <string name="Password">密碼</string>
    <string name="ConfirmPassword">確認密碼</string>
    <string name="Priceinfo">貨品資料</string>
    <string name="category_bread">麵包蛋糕/穀類早餐/麵包醬</string>
    <string name="category_alcohol">酒類</string>
    <string name="category_baby">奶粉/嬰兒用品</string>
    <string name="category_candy">糖果/餅乾/小食</string>
    <string name="category_cleaning">家居用品</string>
    <string name="category_daily">個人護理</string>
    <string name="category_dairy">奶類及乳製品/大豆製品/蛋類</string>
    <string name="category_drink">飲品</string>
    <string name="category_rice">米/食油/罐頭/蔬果/肉類</string>
    <string name="category_sugar">粉麵/煮食用料/冷凍加工食品</string>
    <string name="search_goodname">貨品名稱</string>
    <string name="search_goodbrand">牌子</string>
    <string name="search_goodcategory">分類</string>
    <string name="search_parknshop">百佳</string>
    <string name="search_wellcome">惠康</string>
    <string name="search_aeon">永旺</string>
    <string name="search_marketplace" translatable="false">Market Place:</string>
    <string name="search_daicheong">大昌食品</string>
    <string name="title_activity_search" translatable="false">Search</string>
    <string name="title_activity_barcode" translatable="false">Barcode</string>
    <string name="title_activity_member" translatable="false">Member</string>
    <string name="title_activity_recommendation" translatable="false">Recommendation</string>
    <string name="title_activity_search_goods" translatable="false">SearchGoods</string>
    <string name="title_activity_search_location" translatable="false">SearchLocation</string>
    <string name="searchgoods_prompt">選擇貨品</string>
    <string-array name="searchgoods_array">
        <item>貨品名稱</item>
        <item>貨品分類</item>
        <item>貨品品牌</item>
        <item>超市名稱</item>
    </string-array>
    <string name="search_title">搜尋貨品</string>
    <string name="searchdistrict_prompt">選擇地區</string>
    <string-array name="searchdistrict_array">
        <item>地區</item>
        <item>商店</item>
    </string-array>
    <string-array name="searcharea_array">
        <item>港島</item>
        <item>九龍</item>
        <item>新界</item>
   </string-array>
    <string-array name="searchshop_array">
        <item>九龍海庭道 8 號富榮花園第2期地下66B號鋪</item>
        <item>香港小西灣小西灣道23號富怡花園平台(多層停車場)</item>
        <item>新界屯門石排頭徑1號卓爾廣場2樓210號鋪</item>
        <item>九龍塘尾道22號長輝大廈地下A-C號鋪</item>
        <item>香港石塘咀山道7-9 號長發大廈地下</item>
    </string-array>
    <string-array name="searchhkisland_array"> -->
    <item>中西區</item>
    <item>灣仔區</item>
    <item>東區</item>
    <item>南區</item>
        </string-array>
        <string-array name="searchkowloon_array"> -->
    <item>九龍城區</item>
    <item>黃大仙區</item>
    <item>觀塘區</item>
    <item>油尖旺區</item>
    <item>深水埠區</item>
         </string-array>
         <string-array name="searchnewterr_array"> -->
         <item>荃灣區</item>
         <item>葵青區</item>
         <item>西貢區</item>
         <item>沙田區</item>
         <item>大埔區</item>
         <item>北區</item>
         <item>屯門區</item>
         <item>元朗區</item>
         <item>離島區</item>
         </string-array>
         <string-array name="searchstore_array">
             <item>百佳</item>
             <item>惠康</item>
             <item>MarketPlace</item>
             <item>永旺</item>
             <item>大昌</item>
         </string-array>
         <string name="title_activity_login" translatable="false">Login</string>
         <string name="title_activity_register" translatable="false">Register</string>
         <string name="title_activity_about" translatable="false">About</string>
         <string name="title_activity_setting" translatable="false">Setting</string>
         <string name="title_activity_itempage" translatable="false">Itempage</string>
         <string name="title_activity_pricechart" translatable="false">Pricechart</string>
         <string name="title_activity_commentlist" translatable="false">Commentlist</string>
         <string name="title_activity_share_pricelist" translatable="false">SharePricelist</string>
         <string name="title_activity_sharepriceform" translatable="false">Sharepriceform</string>
         <string name="title_activity_commentform" translatable="false">Commentform</string>
         <string name="title_activity_shopping_cart" translatable="false">ShoppingCart</string>
         <string name="title_activity_memberpage" translatable="false">Memberpage</string>
    <string name="title_activity_sugarlist" translatable="false">sugarlist</string>
    <string name="title_activity_loading_page" translatable="false">loadingPage</string>
    <string name="searchcategory_prompt">選擇分類</string>
    <string name="submit">確定提交</string>
    <string name="my_shoppingcart">我的購物清單</string>
    <string name="Total">總共 $</string>
</resources>