<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/member"
        android:textColor="#ffffffff"
        android:id="@+id/Category_title"
        style="@style/TextAppearance.AppCompat.Title"
        android:background="@drawable/background"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:clickable="false"
        android:textSize="25dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="65dp"
            android:layout_height="80dp"
            android:text="@string/category"
            android:id="@+id/button_category"
            android:layout_column="6"
            android:background="@drawable/ic_button_category"
            android:layout_gravity="bottom"
            android:paddingTop="50dp"
            android:textColor="#ffffffff"
            android:layout_weight="1" />

        <Button
            android:layout_width="65dp"
            android:layout_height="80dp"
            android:text="@string/search"
            android:id="@+id/button_search"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/ic_button_search"
            android:layout_gravity="bottom"
            android:paddingTop="50dp"
            android:textColor="#ffffffff"
            android:layout_weight="1" />

        <Button
            android:layout_width="65dp"
            android:layout_height="80dp"
            android:text="@string/barcode"
            android:id="@+id/button_barcode"
            android:background="@drawable/ic_button_barcode"
            android:layout_gravity="bottom"
            android:paddingTop="50dp"
            android:textColor="#ffffffff"
            android:layout_weight="1" />

        <Button
            android:layout_width="65dp"
            android:layout_height="80dp"
            android:text="@string/recommend"
            android:id="@+id/button_recommend"
            android:background="@drawable/ic_button_recommend"
            android:layout_gravity="bottom"
            android:paddingTop="50dp"
            android:textColor="#ffffffff"
            android:layout_weight="1" />

        <Button
            android:layout_width="65dp"
            android:layout_height="80dp"
            android:text="@string/member"
            android:id="@+id/button_member"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_button_member"
            android:layout_gravity="bottom"
            android:paddingTop="50dp"
            android:textColor="#ffffffff"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Category_title"
        android:id="@+id/linearLayout5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">

        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/login"
            android:id="@+id/button_login"
            android:background="@drawable/ic_button_login"
            android:textColor="#ffffffff"
            android:paddingLeft="40dp" />

        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/register"
            android:id="@+id/button_register"
            android:background="@drawable/ic_button_register"
            android:layout_marginLeft="20dp"
            android:textColor="#ffffffff"
            android:paddingLeft="40dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Category_title">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:id="@+id/button_setting"
                android:layout_marginTop="200dp"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_language"
                android:layout_weight="1"
                android:layout_marginTop="200dp" />
        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/about"
            android:id="@+id/button_about"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

</RelativeLayout>