<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:background="#ffffffff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_shoppingcart"
            android:textColor="#ffffffff"
            android:id="@+id/Category_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:background="@drawable/background"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:clickable="false"
            android:textSize="25dp" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listView3"
            android:layout_weight="1" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="250dp"
            android:layout_height="38dp"
            android:layout_gravity="center_horizontal|right"
            android:gravity="right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:text="@string/Total"
                android:id="@+id/textView_totalprice"
                android:singleLine="false"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10000"
                android:id="@+id/textView_sumofgoods"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delete"
                android:id="@+id/button_delete"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/linearLayout">

            <Button
                android:layout_width="65dp"
                android:layout_height="80dp"
                android:text="@string/category"
                android:id="@+id/button_category"
                android:layout_column="6"
                android:background="@drawable/ic_button_category"
                android:layout_gravity="bottom"
                android:paddingTop="50dp"
                android:textColor="#ffffffff"
                android:layout_weight="1" />

            <Button
                android:layout_width="65dp"
                android:layout_height="80dp"
                android:text="@string/search"
                android:id="@+id/button_search"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/ic_button_search"
                android:layout_gravity="bottom"
                android:paddingTop="50dp"
                android:textColor="#ffffffff"
                android:layout_weight="1" />

            <Button
                android:layout_width="65dp"
                android:layout_height="80dp"
                android:text="@string/barcode"
                android:id="@+id/button_barcode"
                android:background="@drawable/ic_button_barcode"
                android:layout_gravity="bottom"
                android:paddingTop="50dp"
                android:textColor="#ffffffff"
                android:layout_weight="1" />

            <Button
                android:layout_width="65dp"
                android:layout_height="80dp"
                android:text="@string/recommend"
                android:id="@+id/button_recommend"
                android:background="@drawable/ic_button_recommend"
                android:layout_gravity="bottom"
                android:paddingTop="50dp"
                android:textColor="#ffffffff"
                android:layout_weight="1" />

            <Button
                android:layout_width="65dp"
                android:layout_height="80dp"
                android:text="@string/member"
                android:id="@+id/button_member"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/ic_button_member"
                android:layout_gravity="bottom"
                android:paddingTop="50dp"
                android:textColor="#ffffffff"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>