<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="#ffffffff"
        android:id="@+id/Category_title"
        style="@style/TextAppearance.AppCompat.Title"
        android:background="@drawable/background"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clickable="false"
        android:textSize="25dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="65dp"
            android:layout_height="80dp"
            android:text="@string/category"
            android:id="@+id/button_category"
            android:layout_column="6"
            android:background="@drawable/ic_button_category"
            android:layout_gravity="bottom"
            android:paddingTop="50dp"
            android:textColor="#ffffffff"
            android:layout_weight="1" />

        <Button
            android:layout_width="65dp"
            android:layout_height="80dp"
            android:text="@string/search"
            android:id="@+id/button_search"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/ic_button_search"
            android:layout_gravity="bottom"
            android:paddingTop="50dp"
            android:textColor="#ffffffff"
            android:layout_weight="1" />

        <Button
            android:layout_width="65dp"
            android:layout_height="80dp"
            android:text="@string/barcode"
            android:id="@+id/button_barcode"
            android:background="@drawable/ic_button_barcode"
            android:layout_gravity="bottom"
            android:paddingTop="50dp"
            android:textColor="#ffffffff"
            android:layout_weight="1" />

        <Button
            android:layout_width="65dp"
            android:layout_height="80dp"
            android:text="@string/recommend"
            android:id="@+id/button_recommend"
            android:background="@drawable/ic_button_recommend"
            android:layout_gravity="bottom"
            android:paddingTop="50dp"
            android:textColor="#ffffffff"
            android:layout_weight="1" />

        <Button
            android:layout_width="65dp"
            android:layout_height="80dp"
            android:text="@string/member"
            android:id="@+id/button_member"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_button_member"
            android:layout_gravity="bottom"
            android:paddingTop="50dp"
            android:textColor="#ffffffff"
            android:layout_weight="1" />

    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_back"
        android:src="@drawable/ic_action_back"
        android:layout_alignBottom="@+id/Category_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@null"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/Category_title"
        android:layout_above="@+id/linearLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Category_title"
            android:id="@+id/linearlayout3"
            android:layout_alignLeft="@+id/linearLayout3"
            android:layout_alignStart="@+id/linearLayout3"
            android:layout_alignRight="@+id/linearLayout3"
            android:layout_alignEnd="@+id/linearLayout3"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Email"
                android:id="@+id/login_email" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/EditText_Register_Email"
                android:layout_weight="0.56" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/Category_title"
            android:weightSum="1"
            android:layout_toRightOf="@+id/button_back"
            android:id="@+id/linearLayout3"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/Password"
                android:id="@+id/login_password" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/EditText_Register_Password" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Category_title"
            android:layout_alignRight="@+id/linearlayout3"
            android:layout_alignEnd="@+id/linearlayout3"
            android:layout_alignLeft="@+id/linearlayout3"
            android:layout_alignStart="@+id/linearlayout3"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="53dp"
                android:text="@string/ConfirmPassword"
                android:id="@+id/confirmpassword" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/EditText_Register_ConfPassword"
                android:layout_weight="1.73" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView_emailvalid"
            android:layout_weight="1" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="152dp"
            android:layout_gravity="center_vertical"
            android:layout_alignTop="@+id/linearlayout3"
            android:layout_alignRight="@+id/linearlayout3"
            android:layout_alignEnd="@+id/linearlayout3"
            android:layout_alignLeft="@+id/linearlayout3"
            android:layout_alignStart="@+id/linearlayout3"
            android:layout_centerHorizontal="true">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_confirmreg"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/submit"
                android:elegantTextHeight="false" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>